Fix bookshelf horizontal overflow issue

--- a/src/app/dashboard/bookshelf/bookshelf.component.scss
+++ b/src/app/dashboard/bookshelf/bookshelf.component.scss
@@ -13,6 +13,11 @@
   }
 }
 
+.bookshelf-container {
+  overflow: hidden;
+  padding-bottom: $bookshelf-overflow-padding * 1px;
+}
+
 .bookshelf-content {
   padding: 20px 0;
   background-color: white;
