--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -3,10 +3,10 @@
 
 :host {
   @include very-small-to-medium-screen {
-    margin-bottom: $small-margin-between-bookshelves * 1px;
+    margin-bottom: $small-margin-between-bookshelves * 1px + $bookshelf-overflow-padding;
   }
   @include large-to-very-large-screen {
-    margin-bottom: $large-margin-between-bookshelves * 1px;
+    margin-bottom: $large-margin-between-bookshelves * 1px + $bookshelf-overflow-padding;
   }
   background-color: $app-dark-green;
   padding: 16px 4%;
