--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -4,8 +4,10 @@ $medium-width-breakpoint: 800;
 $large-width-breakpoint: 1100;
 $very-large-width-breakpoint: 1400;
 
-$small-margin-between-bookshelves: 60;
-$large-margin-between-bookshelves: 90;
+$small-margin-between-bookshelves: 20;
+$large-margin-between-bookshelves: 40;
+
+$bookshelf-overflow-padding: 50;
 
 $app-yellow: #F9C013;
 $app-dark-green: #1F321C;
