--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -5,5 +5,4 @@ html, body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
-  overflow-x: hidden;
 }
